Enhance property scraping: parse structured info from titles, including city, price, surface, rooms, and bedrooms; add generic extractors for bedrooms, postal codes, and property types. Update test page documentation.

--- a/public/test_import.html
+++ b/public/test_import.html
@@ -9,6 +9,8 @@
   <p>Open this page at: <a href="http://localhost:3000/test_import.html">http://localhost:3000/test_import.html</a></p>
   <p>You must be logged in to use this test page.</p>
 
+  <p><strong>Données extraites :</strong> titre, prix, surface, nombre de pièces, chambres, ville, code postal (si disponible), type de bien, DPE, etc.</p>
+
   <div>
     <label>URL (peut être en format Markdown):</label><br>
     <input type="text" id="url" style="width: 600px;" value="[https://api.jinka.fr/apiv2/alert/redirect_preview?token=4f90eddfeba4e87268ee03eae18d485a&ad=73850207](https://api.jinka.fr/apiv2/alert/redirect_preview?token=4f90eddfeba4e87268ee03eae18d485a&ad=73850207)">
